navigation mobile minor fixed

--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -91,16 +91,16 @@
   justify-content: center;
   align-items: flex-end;
 }
-.image-overlay {
-  width: 345px;
-  height: 174px;
-  transform: translateY(100%);
-  transition: transform 1500ms cubic-bezier(0.215, 0.61, 0.355, 1);
-}
+// .image-overlay {
+//   width: 345px;
+//   height: 174px;
+//   transform: translateY(100%);
+//   transition: transform 1500ms cubic-bezier(0.215, 0.61, 0.355, 1);
+// }
 
-.footer-image:hover .image-overlay {
-  transform: translateY(0);
-}
+// .footer-image:hover .image-overlay {
+//   transform: translateY(0);
+// }
 @keyframes disco {
   from {
     background-image: linear-gradient(
