--- a/src/sass/_modal-order.scss
+++ b/src/sass/_modal-order.scss
@@ -267,6 +267,7 @@
         background-size: 471px 458px;
         background-repeat: no-repeat;
         background-position: 407px 354px;
+        transition: background-position 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .order__fruits{
